--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,20 @@
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/JavaUtil.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-continuation-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-http-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-io-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-security-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-server-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-servlet-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-util-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-webapp-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/jetty-xml-8.1.4.v20120524.jar"/>
+	<classpathentry kind="lib" path="lib/Jetty/servlet-api-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-bundle-1.12.jar"/>
+	<classpathentry kind="lib" path="lib/jsr311-api-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
