--- a/.classpath
+++ b/.classpath
@@ -31,10 +31,11 @@
 	<classpathentry kind="lib" path="lib/hibernate/javassist.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/jta.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/junit.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate/log4j.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/postgresql-9.1-902.jdbc4.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate/slf4j-log4j12.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate/log4j-over-slf4j-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate/slf4j-api-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate/slf4j-log4j12-1.6.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
