--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,6 @@
 	<classpathentry kind="lib" path="lib/hibernate/log4j-over-slf4j-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/slf4j-api-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/slf4j-log4j12-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
