--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="lib" path="lib/hibernate/slf4j-api-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate/slf4j-log4j12-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
